After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 574896 - [Leave message] Cancel button should clean clipboard buffe
[Leave message] Cancel button should clean clipboard buffe
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: dialog
2.25.x
Other All
: Normal minor
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
Depends on:
Blocks:
 
 
Reported: 2009-03-11 08:32 UTC by Michal Nowak
Modified: 2009-08-21 03:06 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
Clear the clipboards when cancelling a message (2.22 KB, patch)
2009-05-05 07:04 UTC, Anatolii Sakhnik
committed Details | Review

Description Michal Nowak 2009-03-11 08:32:11 UTC
Please describe the problem:
When leaving message via gnome-screensaver the clipboard buffer persist closure
of the "Leave message" dialog, but only when the procedure of posting the
message is interrupted via "Cancel" button. The "Save" button does the mock up.

Steps to reproduce:
1. Lock the screen, GNOME Screensaver will pop up
2. Hit "Leave message"
3. Write something, select it, copy to clipboard via Control+C
4. Hit "Cancel"
5. Hit "Leave message"
6. Press Control+P

Actual results:
The buffer from previous editing is pasted.

Expected results:
Buffer is cleared on "Cancel" hit.

Does this happen every time?
Yes, every time.

Other information:
The user who did Control+C could be potentially different from the one who
pressed Control+P and (parts of) the information sent to the "locked" user
might be revealed.

After hitting "Cancel" in the "unlock" screen itself, not in the "Leave
message" dialog, the clipboard buffer is cleared OK.
Comment 1 William Jon McCann 2009-04-14 01:32:18 UTC
Sure, I guess this makes sense.  Have a patch?
Comment 2 Michal Nowak 2009-04-14 08:04:19 UTC
Mmm, nope...
Comment 3 Anatolii Sakhnik 2009-05-05 07:04:16 UTC
Created attachment 133997 [details] [review]
Clear the clipboards when cancelling a message

Just called the existing function, made it visible. Fixed one more warning about conversion NULL -> 0.
Comment 4 William Jon McCann 2009-08-21 03:06:41 UTC
Thanks!  Should be fixed in master.