Clear the clipboards when cancelling a message

Just called the existing function, made it visible.
Fixes http://bugzilla.gnome.org/show_bug.cgi?id=574896